2005-01-25  Zoltan Varga  <vargaz@freemail.hu>

	* Makefile.am (PLATFORM_DISABLED_TESTS): Disable some tests on x86 as well.
	
	* Makefile.am (PLATFORM_DISABLED_TESTS): Disable appdomain-unload.exe
	on amd64 to make the test green again.

2005-01-20  Raja R Harinath  <rharinath@novell.com>

	* libtest.c (mono_test_return_vtype): Fill in a value in the 'd2'
	field too.
	* pinvoke2.cs (test_0_return_vtype): Update.

2005-01-17  Zoltan Varga  <vargaz@freemail.hu>

	* libtest.c pinvoke2.cs pinvoke3.cs: Add tests for unmanaged->managed
	marshalling of unicode strings.

2005-01-15  Zoltan Varga  <vargaz@freemail.hu>

	* thread6.cs: Add test for aborting the current thread.

2005-01-11  Zoltan Varga  <vargaz@freemail.hu>

	* thread6.cs: Add test for rethrowing abort exceptions.

2005-01-06  Sebastien Pouliot  <sebastien@ximian.com>

	* desweak.cs: Add test to check for regression of the bug seen in
	rev 38316. The original code that failed is no more part of the
	class library.

2005-01-06  Zoltan Varga  <vargaz@freemail.hu>

	* libtest.c: Fix blittable_struct_delegate test.

2004-12-29  Zoltan Varga  <vargaz@freemail.hu>

	* pinvoke3.cs libtest.c: Add test for marshalling blittable structs
	with delegates.

	* pinvoke3.cs libtest.c: Add test for marshalling of enums with delegates.

2004-12-26  Patrik Torstensson  <patrik.torstensson@gmail.com>

	* interlocked.cs: added reg test for bug 70784

2004-12-18  Zoltan Varga  <vargaz@freemail.hu>

	* Makefile.am (libtest_la_LDFLAGS): Add -no-undefined so a windows dll is built on windows.

2004-12-15  Patrik Torstensson  <patrik.torstensson@gmail.com>

	* interlocked.cs: New test.

2004-12-14  Raja R Harinath  <rharinath@novell.com>

	* Makefile.am (TEST_PROG_RUN, JITTEST_PROG_RUN): Set MONO_SHARED_DIR.

2004-12-11  Ben Maurer  <bmaurer@ximian.com>

	* thread-static-init.cs: New test.

2004-12-09  Raja R Harinath  <rharinath@novell.com>

	* test-driver: Clean up.