@@ -1,3 +1,7 @@
+2005-01-30  Zoltan Varga  <vargaz@freemail.hu>
+
+	* libtest.c: Fix some warnings.
+
 2005-01-25  Zoltan Varga  <vargaz@freemail.hu>
 
 	* Makefile.am (PLATFORM_DISABLED_TESTS): Disable some tests on x86 as well.
